--- a/src/components/shop/showgoods/goodItem/gooditem.css
+++ b/src/components/shop/showgoods/goodItem/gooditem.css
@@ -21,3 +21,28 @@
   font-size: large;
   font-weight: 700;
 }
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 10px;
+  animation: popup 1s forwards;
+}
+
+@keyframes popup {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+  50% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1.1);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+}
